# context

./: .gitignore  Makefile  Makefile.in  README.txt  aclocal.m4  conf_deb.sh  conf_opt.sh  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: pair1.txt
example/params/: chimp_sf84.txt  chimp_sf84_djc.txt  chimp_sjc.txt  chimp_sjc_djc.txt  dog_sf84.txt  dog_sf84_djc.txt  dog_sjc.txt  dog_sjc_djc.txt  gorilla_sf84.txt  gorilla_sf84_djc.txt  gorilla_sjc.txt  gorilla_sjc_djc.txt  macaque_sf84.txt  macaque_sf84_djc.txt  macaque_sjc.txt  macaque_sjc_djc.txt  marmoset_sf84.txt  marmoset_sf84_djc.txt  marmoset_sjc.txt  marmoset_sjc_djc.txt  mouse_sf84.txt  mouse_sf84_djc.txt  mouse_sjc.txt  mouse_sjc_djc.txt  notes.txt  orang_sf84.txt  orang_sf84_djc.txt  orang_sjc.txt  orang_sjc_djc.txt  tarsier_sf84.txt  tarsier_sf84_djc.txt  tarsier_sjc.txt  tarsier_sjc_djc.txt
src/: LICENSE.txt  Makefile  Makefile.am  Makefile.in  agdoptimizer.cpp  agdoptimizer.h  align.cpp  axtpair.cpp  axtpair.h  axtreader.cpp  axtreader.h  axtsample.cpp  axtscan.cpp  compare.cpp  contextmodel.cpp  contextmodel.h  contextmodeltable.cpp  contextmodeltable.h  contextmodeltest.cpp  ctmarkov.cpp  ctmarkov.h  dnasubmodel.cpp  dnasubmodel.h  dnasubmodeltest.cpp  emissionestimator.cpp  emissionestimator.h  eswalign.cpp  ftagargs.cpp  ftagargs.h  ftaggen.cpp  ftaggen.h  ftagmodel.cpp  ftagmodel.h  ftagmodel_backward.cpp  ftagmodel_bw.cpp  ftagmodel_forward.cpp  ftagmodel_viterbi.cpp  ftagmodeltest.cpp  ftagparams.cpp  ftagparams.h  (+30 more)
(+158 files in other folders)
